<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/outer_space"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"

                android:src="@drawable/hehe" />

            <TextView
                android:id="@+id/fullName"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="13dp"
                android:text="@string/full_name"
                android:textColor="@color/silver_sand" />

            <TextView
                android:id="@+id/nama"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="3dp"
                android:text="@string/rizki_restu_illahi"
                android:textColor="@color/white" />

            <View
                android:id="@+id/Vnama"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/nim"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="13dp"
                android:text="@string/nim"
                android:textColor="@color/silver_sand" />

            <TextView
                android:id="@+id/NIM"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="3dp"
                android:text="@string/NIM"
                android:textColor="@color/white" />

            <View
                android:id="@+id/Vnim"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/kelas"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="13dp"
                android:text="@string/kelas"
                android:textColor="@color/silver_sand" />

            <TextView
                android:id="@+id/if1"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="3dp"
                android:text="@string/if1"
                android:textColor="@color/white" />

            <View
                android:id="@+id/Vkelas"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/jk"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="13dp"
                android:text="@string/gender"
                android:textColor="@color/silver_sand" />

            <TextView
                android:id="@+id/laki"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="3dp"
                android:text="@string/laki"
                android:textColor="@color/white" />

            <View
                android:id="@+id/Vjk"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tanggal"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="13dp"
                android:text="@string/ttl"
                android:textColor="@color/silver_sand" />

            <TextView
                android:id="@+id/ttl"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="3dp"
                android:text="@string/subang_27_april_2000"
                android:textColor="@color/white" />

            <View
                android:id="@+id/Vttl"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/alamat"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="13dp"
                android:text="@string/alamat"
                android:textColor="@color/silver_sand" />

            <TextView
                android:id="@+id/almt"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="3dp"
                android:text="@string/isi_alamat"
                android:textColor="@color/white" />

            <View
                android:id="@+id/Valamat"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/goldar"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="13dp"
                android:text="@string/goldar"
                android:textColor="@color/silver_sand" />

            <TextView
                android:id="@+id/b"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="3dp"
                android:text="@string/b"
                android:textColor="@color/white" />

            <View
                android:id="@+id/Vgoldar"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/mkn"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="13dp"
                android:text="@string/makanan"
                android:textColor="@color/silver_sand" />

            <TextView
                android:id="@+id/isiMkn"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="3dp"
                android:text="@string/chicken_teriyaki"
                android:textColor="@color/white" />

            <View
                android:id="@+id/Vmkn"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/mnm"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="13dp"
                android:text="@string/minuman"
                android:textColor="@color/silver_sand" />

            <TextView
                android:id="@+id/isiMnm"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="3dp"
                android:text="@string/es_teh_manis"
                android:textColor="@color/white" />

            <View
                android:id="@+id/Vmnm"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/hobi"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="13dp"
                android:text="@string/hobi"
                android:textColor="@color/silver_sand" />

            <TextView
                android:id="@+id/isiHobi"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="3dp"
                android:text="@string/bermain_games"
                android:textColor="@color/white" />

            <View
                android:id="@+id/Vhobi"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/lagu"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="13dp"
                android:text="@string/lagu"
                android:textColor="@color/silver_sand" />

            <TextView
                android:id="@+id/isiLagu"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="3dp"
                android:text="@string/ruang_rindu"
                android:textColor="@color/white" />

            <View
                android:id="@+id/Vlagu"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/film"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="13dp"
                android:text="@string/film"
                android:textColor="@color/silver_sand" />

            <TextView
                android:id="@+id/isiFilm"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="3dp"
                android:text="@string/avengers_end_game"
                android:textColor="@color/white" />

            <View
                android:id="@+id/Vfilm"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/pekerjaan"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="13dp"
                android:text="@string/pekerjaan"
                android:textColor="@color/silver_sand" />

            <TextView
                android:id="@+id/kerja"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="3dp"
                android:text="@string/mobile_developer"
                android:textColor="@color/white" />

            <View
                android:id="@+id/Vkerja"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>